[gd_scene load_steps=8 format=3 uid="uid://cg1pgl7dxjhfj"]

[ext_resource type="Script" path="res://Scripts/LevelUi.gd" id="1_o5y1v"]
[ext_resource type="Texture2D" uid="uid://c7j8562i2squu" path="res://Resources/Icons/Rail.png" id="2_4guen"]
[ext_resource type="PackedScene" uid="uid://bctsftvg5wpiq" path="res://Resources/Models/Rail/track-detailed.glb" id="2_wda42"]
[ext_resource type="Texture2D" uid="uid://yniwf1cpohru" path="res://Resources/UI/Rectangle-Border.png" id="3_5oqu6"]
[ext_resource type="Texture2D" uid="uid://behbs0eihu0yi" path="res://Resources/Icons/Wrench.png" id="5_gl6k3"]
[ext_resource type="Texture2D" uid="uid://b71b53dpq3yiu" path="res://Resources/Icons/Recycle.png" id="6_uaueb"]
[ext_resource type="Texture2D" uid="uid://dv337bccpsgsb" path="res://Resources/Icons/Play.png" id="7_73w28"]

[node name="LevelUi" type="Control" node_paths=PackedStringArray("ItemBar")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_o5y1v")
items = Array[PackedScene]([ExtResource("2_wda42")])
ItemBar = NodePath("ItemBar")

[node name="ItemBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.472
anchor_top = 0.901
anchor_right = 0.528
anchor_bottom = 1.0
offset_left = 12.256
offset_top = 24.152
offset_right = -12.256
grow_horizontal = 2
grow_vertical = 0

[node name="Rail" type="TextureButton" parent="ItemBar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_hover = ExtResource("3_5oqu6")

[node name="Icon" type="TextureRect" parent="ItemBar/Rail"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4guen")

[node name="Tool" type="TextureButton" parent="ItemBar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_hover = ExtResource("3_5oqu6")

[node name="Icon" type="TextureRect" parent="ItemBar/Tool"]
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_gl6k3")
expand_mode = 1

[node name="Recycle" type="TextureButton" parent="ItemBar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_hover = ExtResource("3_5oqu6")

[node name="Icon" type="TextureRect" parent="ItemBar/Recycle"]
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_uaueb")
expand_mode = 1

[node name="TextureButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
offset_left = 50.0
offset_top = 50.0
offset_right = 130.0
offset_bottom = 130.0
texture_normal = ExtResource("7_73w28")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="ItemBar/Rail" to="." method="on_item_click" binds= [0]]
[connection signal="pressed" from="ItemBar/Tool" to="." method="on_item_click" binds= [-1]]
[connection signal="pressed" from="ItemBar/Recycle" to="." method="on_item_click" binds= [-2]]
[connection signal="pressed" from="TextureButton" to="." method="_on_play"]
